--- a/tests/generators/index.html
+++ b/tests/generators/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>/
 <html>
 <head>
 <meta charset="utf-8">
@@ -149,7 +149,7 @@ h1 {
     </p>
 
     <p>
-      <input id="indexing" type="checkbox" onchange="changeIndex()" checked NAME="">
+      <input id="indexing" type="checkbox" onchange="changeIndex()" checked NAME="" value="">
       <label for="indexing">Generate with one-based indexing</label>
     </p>
 
