--- a/tests/playground.html
+++ b/tests/playground.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html>/
 <html>
 <head>
 <meta charset="utf-8">
@@ -85,7 +85,7 @@ h1 {
   </p>
   <p>
     Log events: &nbsp;
-    <input type="checkbox" onclick="logEvents(this.checked)" id="logCheck" NAME="">
+    <input type="checkbox" onclick="logEvents(this.checked)" id="logCheck" NAME="" value="">
   </p>
 
   <xml id="toolbox-simple" style="display: none">
